# apothecarys-satchel

./: Cargo.toml  LICENSE  README.md
crates/alsa-sys-stub/: Cargo.toml  build.rs
crates/alsa-sys-stub/src/: lib.rs
crates/botany/: Cargo.toml
crates/botany/src/: genetics.rs  lib.rs  lsystem.rs  mesh_gen.rs  phenotype.rs  stat_mapping.rs  stub.rs  turtle.rs
crates/combat/: Cargo.toml
crates/combat/src/: actions.rs  ai.rs  lib.rs  stub.rs  turn_manager.rs
crates/core/: Cargo.toml
crates/core/src/: components.rs  config.rs  items.rs  lib.rs  stats.rs
crates/dialogue/: Cargo.toml
crates/dialogue/src/: parser.rs  runner.rs  stub.rs
crates/game/: Cargo.toml
crates/game/src/: app.rs  camera.rs  hub.rs  hub_scene.rs  lib.rs  main.rs
crates/game/src/ui/: combat_ui.rs  crafting_ui.rs  dialogue_ui.rs  garden_ui.rs  hud.rs  inventory_ui.rs  main_menu.rs  mod.rs  recruitment_ui.rs
crates/garden/: Cargo.toml
crates/garden/src/: breeding.rs  growth.rs  lib.rs  plots.rs  stub.rs
crates/inventory/: Cargo.toml
crates/inventory/src/: container.rs  crafting.rs  lib.rs
crates/navigation/: Cargo.toml
crates/navigation/src/: input.rs  interaction.rs  lib.rs  navmesh.rs  stub.rs
crates/party/: Cargo.toml
crates/party/src/: generation.rs  lib.rs  permadeath.rs  recruitment.rs  roster.rs  stub.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: lib.rs  load.rs  save.rs  stub.rs  versioning.rs
crates/scripting/: Cargo.toml
crates/scripting/src/: bindings.rs  hot_reload.rs  lib.rs  stub.rs  vm.rs
crates/tools/: Cargo.toml  README.md
crates/tools/src/: animation_viewer.rs  connection_editor.rs  dialogue_tester.rs  lib.rs  map_editor.rs  plant_preview.rs  stub.rs
crates/world/: Cargo.toml
crates/world/src/: lib.rs  location.rs  map_graph.rs  spawning.rs  stub.rs  transitions.rs
data/: locations.ron
docs/design/: 00-architecture-overview.md  01-engine-rendering.md  02-world-navigation.md  03-combat-party.md  04-apothecary-botany.md  05-dialogue-scripting-persistence.md  06-editor-tooling.md  07-task-breakdown.md
