[workspace]
members = [
    "crates/core",
    "crates/game",
    "crates/navigation",
    "crates/inventory",
    "crates/combat",
    "crates/party",
    "crates/world",
    "crates/dialogue",
    "crates/scripting",
    "crates/botany",
    "crates/garden",
    "crates/persistence",
    "crates/tools",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
ron = "0.8"
fyrox = "0.36"
rand = "0.8"
