[package]
name = "apothecarys-combat"
version = "0.1.0"
edition = "2021"

[dependencies]
apothecarys-core = { path = "../core" }
apothecarys-inventory = { path = "../inventory" }
apothecarys-party = { path = "../party" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
rand = "0.8"

[dev-dependencies]
serde_json = { workspace = true }
