[package]
name = "apothecarys-game"
version = "0.1.0"
edition = "2021"

[dependencies]
apothecarys-core = { path = "../core" }
apothecarys-inventory = { path = "../inventory" }
apothecarys-party = { path = "../party" }
apothecarys-combat = { path = "../combat" }
apothecarys-garden = { path = "../garden" }
apothecarys-botany = { path = "../botany" }
apothecarys-world = { path = "../world" }
apothecarys-dialogue = { path = "../dialogue" }
apothecarys-persistence = { path = "../persistence" }
fyrox = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[[bin]]
name = "game"
path = "src/main.rs"
