[package]
name = "apothecarys-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
apothecarys-core = { path = "../core" }
apothecarys-botany = { path = "../botany" }
rand = { workspace = true }
fyrox = { workspace = true, optional = true }

[features]
default = ["viewer"]
viewer = ["fyrox"]

[[bin]]
name = "plant_previewer"
path = "src/bin/plant_previewer.rs"
required-features = ["viewer"]
